--- a/app/src/main/res/layout/soal.xml
+++ b/app/src/main/res/layout/soal.xml
@@ -11,7 +11,7 @@
     <View
         android:id="@+id/gelombang1"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="140dp"
         android:background="@drawable/gelombang1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +45,21 @@
         app:layout_constraintBottom_toBottomOf="@id/logo_mitra"
         app:layout_constraintStart_toEndOf="@id/logo_mitra"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Tombol Back di bawah logo -->
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_back"
+        android:contentDescription="Tombol Kembali"
+        android:scaleType="fitCenter"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/logo_mitra"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- JILID Container (FIXED ID) -->
     <LinearLayout
@@ -240,7 +255,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -284,7 +299,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginBottom="8dp">
 
             <Button
                 android:id="@+id/btn_lihat"
@@ -313,43 +329,5 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
-
-    <!-- Bottom Navigation -->
-    <View
-        android:id="@+id/bottom_nav"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:background="@drawable/rounded_bottom_nav"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Home Button -->
-    <LinearLayout
-        android:id="@+id/btn_home"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:background="@drawable/home"
-        android:elevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- Settings Button -->
-    <LinearLayout
-        android:id="@+id/btn_settings"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:background="@drawable/setting"
-        android:elevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
