--- a/app/src/main/res/layout/home_dev.xml
+++ b/app/src/main/res/layout/home_dev.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5DD62C">
+    android:background="@drawable/gradient_background">
+
+    <!-- Buat file gradient_background.xml di folder res/drawable -->
 
     <!-- Scrollable Content Area -->
     <ScrollView
@@ -17,6 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- Konten tetap sama seperti sebelumnya -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/home"
             android:layout_width="match_parent"
